style.css
/* ... */
#tool #tip {
    width: 120px;
    background-color: var(--backingOne);
    color: var(--textTwo);
    text-align: center;
    border-radius: 6px;
    padding: 5px 0;
    position: absolute;
    z-index: 1;
    bottom: -0%;
    left: 140%;
    margin-left: -110px;
    opacity: 0;
    transition: all .2s ease;
}

#tool #tip::after {
    content: "";
    position: absolute;
    top: 38%;
    left: -6%;
    margin-left: -5px;
    border-width: 5px;
    border-style: solid;
    border-color: transparent var(--backingOne) transparent transparent;
    transform: scale(1.4);
}

#tool:hover #tip {
    opacity: 1;
}

#contact #links {
    list-style-type: none;
}

#contact #links a {
    transition: all .2s ease;
    display: flex;
    flex-direction: column;
    align-items: center;
    color: var(--textTwo);
    padding: 3rem;
}

#contact #links a:hover,
#contact #links a:focus {
    color: var(--accent);
    text-decoration: none;
}

#contact #links span {
    font-size: 2rem;
}

#contact #links i {
    font-size: 6rem;
}



/*End of contact section styling*/

/*Media queries (bootstaps css also includes some that occur at the same widths as these*/
@media (max-width: 1044px) {
    .descText {
        margin-left: 20%;
        margin-right: 2rem;
    }
}

@media (max-width: 992px) {
    #navbarItems {
        text-align: right;
        max-height: 0;
        width: 0;
        overflow: hidden;
    }

    #navbar-title {
        display: none;
    }

    #navbarItems ul {
        float: right;
    }

    #navbarItems li {
        margin-right: 1.4rem;
        width: 8rem;
    }

    #navbarItems li:last-child {
        margin-right: 0;
        padding-bottom: 1rem;
    }

    #footer button {
        margin-right: 1rem;
    }

    .descText {
        margin-left: 8%;
    }
}

@media (max-width: 767.98px) {
    #footer button {
        margin-top: .5rem;
    }

    #footer #links {
        float: left;
        margin-top: 0;
    }

    #contact #links {
        font-size: 10px;
    }

    #contact #links a {
        padding: 0.5rem;
    }
}

@media (max-width: 575.98px) {

    #cvContainer,
    #contact {
        margin: 2rem;
    }

    #footer {
        margin-left: 5px;
    }

    .descText {
        margin-left: 5%;
    }

    #gallery img {
        margin-top: 0;
    }
}

@media (max-width: 400px) {
    .descText h2 {
        font-size: 20px;
    }

    .descText p {
        font-size: 16px;
    }
}

/*end of media queries*/

/*this styles the scrollbar*/
::-webkit-scrollbar {
    background-color: var(--fullBackground);
    width: 5px;
}

/*this makes the scrollbar track the same colour as the site background and have a width of 5px*/
::-webkit-scrollbar-thumb {
    background-color: var(--backingTwo);
}

/*this makes the track piece or thumb have a colour contrasting the thumb colour*/
::-webkit-scrollbar-thumb:hover {
    background-color: var(--accent);
}

/*set thumb to have a hover effect*/

